--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
 <link rel="stylesheet" type="text/css"
       href="https://ict.usc.edu/~core/settings"/>
 <link rel="SHORTCUT ICON" href="https://ict.usc.edu/~core/favicon.ico"/>
-   <title>Mark's ICT Research</title>
+   <title>Mark's Research</title>
 </head>
 <BODY>
 
