chapter and accepted EDM paper

--- a/papers.html
+++ b/papers.html
@@ -22,6 +22,22 @@ The papers are organized by the location where the work was performed.
 
 <ul>
 
+<li>
+<p>
+Benjamin Nye, Mark G. Core, Shikar Jaiswal, Aviroop Ghosal & Daniel Auerbach. (Accepted). Acting Engaged: Leveraging Player Persona Archetypes for Semi-Supervised Classification of Engagement.  In <a href="https://educationaldatamining.org/edm2021/">Educational Data Mining (EDM)</a>.
+</p>
+</li>
+
+<li>
+<p>
+Benjamin D. Nye, Mark G. Core, Aviroop Ghosal &amp; Peter B. Walker (2021). 
+Metrics for Engagement in Games and Simulations for Learning. In 
+H. F. O'Neil, E. L. Baker, R. S. Perez, S. E. Watson (Eds.), 
+<a href="https://www.routledge.com/Using-Cognitive-and-Affective-Metrics-in-Educational-Simulations-and-Games/ONeil-Baker-Perez-Watson/p/book/9780367243821">
+Using Cognitive and Affective Metrics in Educational Simulations and Games: Applications in School and Workplace Contexts.</a> Routledge. Associated project: <b>SMART-E</b>.
+</p>
+</li>
+
 <li><p>
 Benjamin D. Nye, Mark G. Core, Daniel Auerbach, Aviroop Ghosal, Shikhar Jaiswal &amp; Milton Rosenberg. (2020). 
 Integrating an Engagement Classification Pipeline into a GIFT Cybersecurity Module.  In 
