added page numbers to book chapter

--- a/papers.html
+++ b/papers.html
@@ -34,7 +34,7 @@ Benjamin D. Nye, Mark G. Core, Aviroop Ghosal &amp; Peter B. Walker (2021).
 Metrics for Engagement in Games and Simulations for Learning. In 
 H. F. O'Neil, E. L. Baker, R. S. Perez, S. E. Watson (Eds.), 
 <a href="https://www.routledge.com/Using-Cognitive-and-Affective-Metrics-in-Educational-Simulations-and-Games/ONeil-Baker-Perez-Watson/p/book/9780367243821">
-Using Cognitive and Affective Metrics in Educational Simulations and Games: Applications in School and Workplace Contexts.</a> Routledge. Associated project: <b>SMART-E</b>.
+Using Cognitive and Affective Metrics in Educational Simulations and Games: Applications in School and Workplace Contexts.</a> Routledge, 107-130. Associated project: <b>SMART-E</b>.
 </p>
 </li>
 
