fixed/removed some broken links

--- a/papers.html
+++ b/papers.html
@@ -175,7 +175,7 @@ Proceedings of the Interservice/Industry Training Simulation and Education Confe
 <p>
 <a name="IVA-2011">
 Antonio Roque, Dusan Jan, Mark Core & David Traum. (2011).</a>
-<a href="http://aroque.bol.ucla.edu/pubs/roqueEtAl-iva11-vrAfterActionReview.pdf">Using virtual tour behavior to build dialogue models for training review</a> (click to download from Roque). Short paper in Proceedings of the 11th International Conference on Intelligent Virtual Agents (IVA), 100-105. Associated project: <b>VIGOR</b>.
+<u>Using virtual tour behavior to build dialogue models for training review.</u> Short paper in Proceedings of the 11th International Conference on Intelligent Virtual Agents (IVA), 100-105. Associated project: <b>VIGOR</b>.
 </p>
 </li>
 
@@ -305,7 +305,7 @@ SIMULATION</a>, November, 82(11), 685-701. Associated project: <b>RTXAI</b>.
 <li>
 <p>
 Randall W. Hill, Jr., James Belanich, H. Chad Lane, Mark Core, Melissa Dixon, Eric Forbell, Julia Kim & John Hart. (2006).   
-<A href="https://ict.usc.edu/~core/papers/2006-09-ASC06-ELECT-BiLAT-FINAL.pdf">
+<A href="papers/2006-09-ASC06-ELECT-BiLAT-FINAL.pdf">
 Pedagogically Structured Game-Based Training: Development
 of the ELECT BiLAT Simulation.</a> In Proceedings of the 25th Army Science
 Conference. Associated project: <b>BiLAT</b>.
@@ -314,7 +314,7 @@ Conference. Associated project: <b>BiLAT</b>.
 <li><p>
 H. Chad Lane, Mark Core, Dave Gomboc, Steve Solomon, Michael van Lent &
 Milton Rosenberg. (2006).
-<A href="https://ict.usc.edu/~core/papers/ITS06Lane.pdf">
+<A href="papers/ITS06Lane.pdf">
 Reflective Tutoring for Immersive Simulation.</a> Poster in 
 Proceedings of the 8th International Conference on Intelligent
 Tutoring Systems (ITS), 732-734.</p>
@@ -323,7 +323,7 @@ Tutoring Systems (ITS), 732-734.</p>
 <li><p>
 Mark G. Core, H. Chad Lane, Michael van Lent, Dave Gomboc, Steve Solomon &
 Milton Rosenberg. (2006).  
-<A href="https://ict.usc.edu/~core/papers/IAAI0602CoreM.pdf">
+<A href="papers/IAAI0602CoreM.pdf">
 Building Explainable Artificial Intelligence Systems.</a> In Proceedings
 of the 18th Innovative Applications of Artificial
 Intelligence Conference (IAAI), 41-44. Associated project: <b>RTXAI</b>.
@@ -577,8 +577,8 @@ in Collaborative Systems,
 <li>
 <p>
 Mark G. Core & Lenhart K. Schubert. (1999).
-<a href="ftp://ftp.cs.rochester.edu/pub/papers/ai/99.Core-Schubert.ICPHS.pdf">
-Speech Repairs: A Parsing Perspective</a> (click to download from URCS). In Proceedings of the ICPhS 1999
+<u>
+Speech Repairs: A Parsing Perspective.</u> In Proceedings of the ICPhS 1999
 Satellite Meeting on Disfluency in Spontaneous Speech, 47-50.
 </p>
 </li>
