--- a/papers.html
+++ b/papers.html
@@ -22,9 +22,19 @@ The papers are organized by the location where the work was performed.
 
 <ul>
 
+	<li>
+		<p>
+		Benjamin D. Nye, Aditya Jain, Dilan R. Ramirez, Mark G. Core, &amp; William Swartout. (2022).
+		Designing a Rapid Adaptive Content Registry (RACR) for Adaptive Learning.
+		In Proceedings of the Interservice/Industry Training Simulation and Education Conference (I/ITSEC).
+		</p>
+	</li>
+
 <li>
 <p>
-Benjamin D. Nye, Mark G. Core, Shikhar Jaiswal, Aviroop Ghosal & Daniel Auerbach. (2021). Acting Engaged: Leveraging Player Persona Archetypes for Semi-Supervised Classification of Engagement.  In <a href="https://educationaldatamining.org/edm2021/">Educational Data Mining (EDM)</a>. Associated project: <b>SMART-E</b>.
+Benjamin D. Nye, Mark G. Core, Shikhar Jaiswal, Aviroop Ghosal &amp; Daniel Auerbach. (2021). 
+Acting Engaged: Leveraging Player Persona Archetypes for Semi-Supervised Classification of Engagement.  
+In Proceedings of <a href="https://educationaldatamining.org/edm2021/">Educational Data Mining (EDM)</a>. Associated project: <b>SMART-E</b>.
 </p>
 </li>
 
