removed old URL refs

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 <head>
 <link rel="stylesheet" type="text/css"
-      href="https://ict.usc.edu/~core/settings"/>
-<link rel="SHORTCUT ICON" href="https://ict.usc.edu/~core/favicon.ico"/>
+      href="https://markcore.github.io/settings"/>
+<link rel="SHORTCUT ICON" href="https://markcore.github.io/favicon.ico"/>
    <title>Mark Core</title>
 </head>
 <BODY>
@@ -47,10 +47,10 @@ intelligence.
 
 <h3>Teaching</h3>
 <ul>
-<li><a href="https://nld.ict.usc.edu/cs544-spring2020">CSCI 544: Applied Natural language Processing: Spring 2020</a>
+<li><a href="CSCI544/cs544-spring2020">CSCI 544: Applied Natural language Processing: Spring 2020</a>
 <ul>
-<li><a href="https://nld.ict.usc.edu/cs544-fall2016">Fall 2016</a></li>
-<li><a href="https://nld.ict.usc.edu/cs544-fall2015">Fall 2015</a></li>
+<li><a href="CSCI544/cs544-fall2016">Fall 2016</a></li>
+<li><a href="CSCI544/cs544-fall2015">Fall 2015</a></li>
 </ul>
 </li>
 <li>ITP 115: Programming in Python: Spring 2018</li>
