--- a/papers.html
+++ b/papers.html
@@ -21,6 +21,11 @@ The papers are organized by the location where the work was performed.
 <a name="XAI"><h2>USC Institute for Creative Technologies</h2></a>
 
 <ul>
+	<li>
+		<p>
+		Benjamin Nye, Dillon Mee, &amp; Mark G. Core. (2023). <a href="https://drive.google.com/file/d/1aIrWE3U4wDxUhtOXgsxvj6nwb_3_q046/view?usp=drive_link">Generative Large Language Models for Dialog-Based Tutoring: An Early Consideration of Opportunities and Concerns.</a> In Proc. of the AIED Workshop on Empowering Education with LLMs - the Next-Gen Interface and Content Generation.
+		</p>
+	</li>
 
 	<li>
 		<p>
