--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ intelligence.
 
 <h3>Teaching</h3>
 <ul>
-<li><a href="CSCI544/cs544-spring2020">CSCI 544: Applied Natural language Processing: Spring 2020</a>
+<li><a href="CSCI544/cs544-spring2020">CSCI 544: Applied Natural Language Processing: Spring 2020</a>
 <ul>
 <li><a href="CSCI544/cs544-fall2016">Fall 2016</a></li>
 <li><a href="CSCI544/cs544-fall2015">Fall 2015</a></li>
