added 3 new papers

--- a/papers.html
+++ b/papers.html
@@ -23,7 +23,30 @@ The papers are organized by the location where the work was performed.
 <ul>
 	<li>
 		<p>
-		Benjamin Nye, Dillon Mee, &amp; Mark G. Core. (2023). <a href="https://drive.google.com/file/d/1aIrWE3U4wDxUhtOXgsxvj6nwb_3_q046/view?usp=drive_link">Generative Large Language Models for Dialog-Based Tutoring: An Early Consideration of Opportunities and Concerns.</a> In Proc. of the AIED Workshop on Empowering Education with LLMs - the Next-Gen Interface and Content Generation.
+		Mark G. Core, Benjamin D. Nye, &amp; Brent D. Fegley. (2024).
+		Trend-Aware Scenario Authoring: Adapting Training Toward Patterns
+        from Real Operations. In Proceedings of the 26th International Conference on Human-Computer Interaction.                                                      
+        </p>
+	</li>
+	<li>
+		<p>
+        Benjamin D. Nye, Mark G. Core , Sai V. R. Chereddy, Vivian Young,
+        &amp; Daniel Auerbach. (2024). Bootstrapping Assessments for Team
+        Simulations: Transfer Learning Between First-Person-Shooter Game Maps.
+        In Proceedings of the 26th International Conference on Human-Computer Interaction.
+        </p>
+	</li>
+	<li>
+		<p>
+        Alesia Gainer, Allison Aptaker, Ron Artstein, David Cobbins, Mark Core, Carla Gordon, Anton Leuski,
+        Zongjian Li, Chirag Merchant, David Nelson, Mohammad Soleymani, &amp; David Traum. (2023). DIVIS: 
+        Digital Interactive Victim Intake Simulator. Extended abstract in Proceedings of the 23rd ACM 
+		International Conference on Intelligent Virtual Agents (IVA '23).
+        </p>
+	</li>
+	<li>
+		<p>
+		Benjamin Nye, Dillon Mee, &amp; Mark G. Core. (2023). <a href="https://drive.google.com/file/d/1aIrWE3U4wDxUhtOXgsxvj6nwb_3_q046/view?usp=drive_link">Generative Large Language Models for Dialog-Based Tutoring: An Early Consideration of Opportunities and Concerns.</a> In Proceedings of the AIED Workshop on Empowering Education with LLMs - the Next-Gen Interface and Content Generation.
 		</p>
 	</li>
 
