change section names

--- a/papers.html
+++ b/papers.html
@@ -12,13 +12,13 @@ The papers are organized by the location where the work was performed.
 </p>
 
 <ul>
-<li><a href="papers.html#XAI">USC Institute for Creative Technologies</a></li>
-<li><a href="papers.html#tutoring">University of Edinburgh</a></li>
-<li><a href="papers.html#dparsing">University of Rochester</a></li>
+<li><a href="papers.html#ICT">USC Institute for Creative Technologies</a></li>
+<li><a href="papers.html#Edinburgh">University of Edinburgh</a></li>
+<li><a href="papers.html#Rochester">University of Rochester</a></li>
 <li><a href="index.html">Back to Home Page</a></li>
 </ul>
 
-<a name="XAI"><h2>USC Institute for Creative Technologies</h2></a>
+<a name="ICT"><h2>USC Institute for Creative Technologies</h2></a>
 
 <ul>
 	<li>
@@ -402,7 +402,7 @@ in Modeling and Simulation (BRIMS).
 
 </ul>
 
-<a name="tutoring"><h2>University of Edinburgh</h2></a>
+<a name="Edinburgh"><h2>University of Edinburgh</h2></a>
 
 <h3>The BEETLE System</h3>
 
@@ -515,7 +515,7 @@ In Proceedings of the NAACL 2001 Workshop on Adaptation in Dialogue Systems.
 </li>
 </ul>
 
-<a name="dparsing"><h2>University of Rochester</h2></a>
+<a name="Rochester"><h2>University of Rochester</h2></a>
 <h3>Dialog Parsing: From Speech Repairs to Speech Acts</h3>
 
 <p>
