--- a/papers.html
+++ b/papers.html
@@ -22,6 +22,12 @@ The papers are organized by the location where the work was performed.
 
 <ul>
 	<li>
+	    <p>
+        David Nelson, Russell Cohen Hoffing, Steven Thurman, Rhys Yahata, David Cobbins, Mark Core, Deniz Marti, 
+		Anthony DeCapite, Allison Aptaker, &amp; Rylan Pozniak Daniels. (2024).
+        Adaptive Interfaces for Better Decision Making.
+		In Proceedings of the Interservice/Industry Training Simulation and Education Conference (I/ITSEC).
+		</p>
 		<p>
 		Mark G. Core, Benjamin D. Nye, &amp; Brent D. Fegley. (2024).
 		Trend-Aware Scenario Authoring: Adapting Training Toward Patterns
@@ -46,7 +52,9 @@ The papers are organized by the location where the work was performed.
 	</li>
 	<li>
 		<p>
-		Benjamin Nye, Dillon Mee, &amp; Mark G. Core. (2023). <a href="https://drive.google.com/file/d/1aIrWE3U4wDxUhtOXgsxvj6nwb_3_q046/view?usp=drive_link">Generative Large Language Models for Dialog-Based Tutoring: An Early Consideration of Opportunities and Concerns.</a> In Proceedings of the AIED Workshop on Empowering Education with LLMs - the Next-Gen Interface and Content Generation.
+		Benjamin Nye, Dillon Mee, &amp; Mark G. Core. (2023). 
+		<a href="https://drive.google.com/file/d/1aIrWE3U4wDxUhtOXgsxvj6nwb_3_q046/view?usp=drive_link">Generative Large Language Models for Dialog-Based Tutoring: An Early Consideration of Opportunities and Concerns.</a> 
+		In Proceedings of the AIED Workshop on Empowering Education with LLMs - the Next-Gen Interface and Content Generation.
 		</p>
 	</li>
 
