FLAIRS and AIED full papers

--- a/papers.html
+++ b/papers.html
@@ -23,6 +23,23 @@ The papers are organized by the location where the work was performed.
 <ul>
 	<li>
 	    <p>
+	Joel Walsh, Siddarth Mamidanna, Benjamin Nye, Mark G. Core, &amp; Daniel Auerbach. (2025).
+	<a href="https://drive.google.com/file/d/1hwpbX_6cbiOVr8gu2NCEAhMyBoNt14Vd/view">
+		Fine-tuning for Better Few Shot Prompting: An Empirical Comparison for Short Answer Grading.</a>
+	In Proceedings of the AIED Workshop on Automated Evaluation of Learning and Assessment Content.
+	    </p>
+	</li>
+	<li>
+	    <p>
+	Mark G. Core, Benjamin Nye, Kayla Carr, Shirley Li, Aaron Shiel, Daniel Auerbach, Andrew Leeds, &amp;
+	        William Swartout. (2025).
+		<a href="https://journals.flvc.org/FLAIRS/article/view/138996/144018">
+			Usability and Preferences for a Personalized Adaptive Learning System for AI Upskilling.</a>
+		In Proceedings of the 38th International Florida Artificial Intelligence Research Society Conference (FLAIRS).
+	    </p>
+	</li>
+	<li>
+	    <p>
         David Nelson, Russell Cohen Hoffing, Steven Thurman, Rhys Yahata, David Cobbins, Mark Core, Deniz Marti, 
 		Anthony DeCapite, Allison Aptaker, &amp; Rylan Pozniak Daniels. (2024).
         Adaptive Interfaces for Better Decision Making.
