add I/ITSEC papers

--- a/papers.html
+++ b/papers.html
@@ -22,6 +22,20 @@ The papers are organized by the location where the work was performed.
 
 <ul>
 	<li>
+	    <p> 
+	Volkan Ustun, Soham Hans, Benjamin D Nye, Mark G. Core, James J Sterrett, &amp; Matthew K Green. (2025). 
+	Towards AI-Assisted Generation of Military Training Scenarios.
+	In Proceedings of the Interservice/Industry Training Simulation and Education Conference (I/ITSEC).
+	    </p>
+	</li>
+	<li>
+	    <p>
+	Benjamin D Nye, Jose-Luis Ambite, Joel Matthew, Mark G. Core, Daniel D Auerbach, Dilan R Ramirez, &amp; Joel Walsh. (2025).
+	Training Developer Feedback on AI for Revision of Content (ARC).
+	In Proceedings of the Interservice/Industry Training Simulation and Education Conference (I/ITSEC).
+	    </p>
+	</li>
+	<li>
 	    <p>
 	Joel Walsh, Siddarth Mamidanna, Benjamin Nye, Mark G. Core, &amp; Daniel Auerbach. (2025).
 	<a href="https://drive.google.com/file/d/1hwpbX_6cbiOVr8gu2NCEAhMyBoNt14Vd/view">
