add HCII 2024 papers

--- a/papers.html
+++ b/papers.html
@@ -63,15 +63,17 @@ The papers are organized by the location where the work was performed.
 	<li>
 		<p>
 		Mark G. Core, Benjamin D. Nye, &amp; Brent D. Fegley. (2024).
-		Trend-Aware Scenario Authoring: Adapting Training Toward Patterns
-        from Real Operations. In Proceedings of the 26th International Conference on Human-Computer Interaction.                                                      
+		<a href="papers/HCII_TOPMAST.pdf">Trend-Aware Scenario Authoring: Adapting Training Toward Patterns
+			from Real Operations.</a> 
+		In Proceedings of the 26th International Conference on Human-Computer Interaction.                                                      
         </p>
 	</li>
 	<li>
 		<p>
         Benjamin D. Nye, Mark G. Core , Sai V. R. Chereddy, Vivian Young,
-        &amp; Daniel Auerbach. (2024). Bootstrapping Assessments for Team
-        Simulations: Transfer Learning Between First-Person-Shooter Game Maps.
+        &amp; Daniel Auerbach. (2024). 
+	<a href="papers/HCII_SLATS.pdf">Bootstrapping Assessments for Team
+		Simulations: Transfer Learning Between First-Person-Shooter Game Maps.</a>
         In Proceedings of the 26th International Conference on Human-Computer Interaction.
         </p>
 	</li>
