--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head>
 <link rel="stylesheet" type="text/css"
@@ -17,7 +18,7 @@ Research Scientist</h3>
 <a href="https://ict.usc.edu">
 USC Institute for Creative Technologies</a><br>
 12015 Waterfront Drive<br>
-Playa Vista, CA 90094 USA</td>
+Playa Vista, CA 90094 USA
 </td>
  
 <tr/>
@@ -26,11 +27,12 @@ Playa Vista, CA 90094 USA</td>
 email: my-last-name &lt;AT>ict.usc.edu
 </p>
 
+<div id="contentarea">
 <p>
 My Ph.D. work at the University of Rochester focused on natural
 language understanding (NLU) in the context of dialogue, and included
 analysis of problem-solving dialogues using 
-<a href="http://www.cs.rochester.edu/research/cisd/resources/damsl/RevisedManual/RevisedManual.html">DAMSL<a/>,
+<a href="http://www.cs.rochester.edu/research/cisd/resources/damsl/RevisedManual/RevisedManual.html">DAMSL</a>,
 Dialog Act Markup in Several Layers.
 See <a href="papers.html#dparsing">the Univ. of Rochester</a> section
 of my publications for more details. 
@@ -44,6 +46,7 @@ In 2004, I moved to USC's Institute for Creative Technologies
 where I have been working more generally in applied artificial
 intelligence. 
 </p>
+</div>
 
 <h3>Teaching</h3>
 <ul>
