try to fix style

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <link rel="stylesheet" type="text/css"
-      href="https://markcore.github.io/settings"/>
+      href="https://markcore.github.io/settings.css"/>
 <link rel="SHORTCUT ICON" href="https://markcore.github.io/favicon.ico"/>
    <title>Mark Core</title>
 </head>
