--- a/papers.html
+++ b/papers.html
@@ -1,5 +1,8 @@
+<!DOCTYPE html>
 <html>
 <head>
+<link rel="stylesheet" type="text/css"
+      href="https://markcore.github.io/settings.css"/>
 <link rel="SHORTCUT ICON" href="https://ict.usc.edu/~core/favicon.ico"/>
    <title>Mark's Publications</title>
 </head>
@@ -23,14 +26,14 @@ The papers are organized by the location where the work was performed.
 <ul>
 	<li>
 	    <p> 
-	Volkan Ustun, Soham Hans, Benjamin D Nye, Mark G. Core, James J Sterrett, &amp; Matthew K Green. (2025). 
+	Volkan Ustun, Soham Hans, Benjamin D. Nye, Mark G. Core, James J. Sterrett, &amp; Matthew K. Green. (2025). 
 	Towards AI-Assisted Generation of Military Training Scenarios.
 	In Proceedings of the Interservice/Industry Training Simulation and Education Conference (I/ITSEC).
 	    </p>
 	</li>
 	<li>
 	    <p>
-	Benjamin D Nye, Jose-Luis Ambite, Joel Matthew, Mark G. Core, Daniel D Auerbach, Dilan R Ramirez, &amp; Joel Walsh. (2025).
+	Benjamin D. Nye, Jose-Luis Ambite, Joel Matthew, Mark G. Core, Daniel Auerbach, Dilan R. Ramirez, &amp; Joel Walsh. (2025).
 	Training Developer Feedback on AI for Revision of Content (ARC).
 	In Proceedings of the Interservice/Industry Training Simulation and Education Conference (I/ITSEC).
 	    </p>
