--- a/projects.html
+++ b/projects.html
@@ -1,7 +1,8 @@
+<!DOCTYPE html>
 <html>
 <head>
 <link rel="stylesheet" type="text/css"
-      href="https://ict.usc.edu/~core/settings"/>
+      href="https://ict.usc.edu/~core/settings.css"/>
 <link rel="SHORTCUT ICON" href="https://ict.usc.edu/~core/favicon.ico"/>
    <title>Mark's Research</title>
 </head>
