try fixing width again

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ Playa Vista, CA 90094 USA
 email: my-last-name &lt;AT>ict.usc.edu
 </p>
 
-<div id="contentarea" width="600px">
+<div id="contentarea" style="width:600px;">
 <p>
 My Ph.D. work at the University of Rochester focused on natural
 language understanding (NLU) in the context of dialogue, and included
