--- a/papers2.html
+++ b/papers2.html
@@ -243,7 +243,7 @@ Journal of Educational Psychology, Special Issue on Advanced Learning Technologi
 
 <li><p>
 Mark G. Core. (2012). <a href="http://www.cm.is.ritsumei.ac.jp/c5-12/proc/papers/core-C5-12_8.pdf">Natural Language Understanding Considerations for
-      a Lifelong Learning Companion</a> (click to download from conference site). In Proceedings of the 10th International Conference on
+      a Lifelong Learning Companion</a>. In Proceedings of the 10th International Conference on
 Creating, Connecting and Collaborating through Computing, 3-8. Associated project: <b>TACL</b>.
 </p>
 </li>
@@ -261,7 +261,8 @@ Proceedings of the Interservice/Industry Training Simulation and Education Confe
 <p>
 <a name="IVA-2011">
 Antonio Roque, Dusan Jan, Mark Core & David Traum. (2011).</a>
-<u>Using virtual tour behavior to build dialogue models for training review.</u> Short paper in Proceedings of the 11th International Conference on Intelligent Virtual Agents (IVA), 100-105. Associated project: <b>VIGOR</b>.
+<u>Using virtual tour behavior to build dialogue models for training review.</u> Short paper in Proceedings of the 11th International Conference on Intelligent Virtual Agents (IVA), 100-105. Keywords: <b>intelligent tutoring systems,
+  immersive technologies</b>.
 </p>
 </li>
 
@@ -270,18 +271,20 @@ Antonio Roque, Dusan Jan, Mark Core & David Traum. (2011).</a>
 Arno Hartholt, Cyrus Wilson, Kallirroi Georgila, Fabrizio Morbini,
 Edward Haynes, Dave Gomboc, Mike Birch, Jonathan Bobrow, H. Chad Lane,
 Jillian Gerten, Anton Leuski, David Traum, Matthew Trimmer, Rich
-DiNinni, Matthew Bosack, Timothy Jones, Richard E. Clark & Kenneth
+DiNinni, Matthew Bosack, Timothy Jones, Richard E. Clark &amp; Kenneth
 A. Yates. (2011). <u>Developing INOTS to Support Interpersonal Skills
-Practice.</u>  In Proceedings of the IEEE Aerospace Conference. Associated project: <b>INOTS</b>.
+Practice.</u>  In Proceedings of the IEEE Aerospace Conference. Keywords: <b>virtual role players,
+  intelligent tutoring systems, immersive technologies, leadership counseling, INOTS</b>.
 </p></li>
 
 <li>
 <p>
 <a name="ITS-2010">
-H. Chad Lane, Matthew J. Hays, Daniel Auerbach & Mark G. Core.
+H. Chad Lane, Matthew J. Hays, Daniel Auerbach &amp; Mark G. Core.
 (2010).</a>
 <a href="http://hayslab.com/publications/lane.hays.auerbach.core.2010.pdf">
-Investigating the relationship between presence and learning in a serious game</a> (click to download from Hays). In Proceedings of the 10th International Conference on Intelligent Tutoring Systems (ITS), 274-284. Associated project: <b>BiLAT</b>.
+Investigating the relationship between presence and learning in a serious game</a>. In Proceedings of the 10th International Conference on Intelligent Tutoring Systems (ITS), 274-284. Keywords: <b>virtual role players, 
+intelligent tutoring systems, negotiation, cultural awareness, BILAT</b>.
 </p>
 </li>
 
@@ -289,7 +292,7 @@ Investigating the relationship between presence and learning in a serious game</
 <li>
 <p>
 <a name="CATS-2009">
-Robert Wray, H. Chad Lane, Brian Stensrud, Mark Core, Laura Hamel & Eric Forbell. 
+Robert Wray, H. Chad Lane, Brian Stensrud, Mark Core, Laura Hamel &amp; Eric Forbell. 
 (2009).</a>
 <a href="papers/AIED09-CATS_PedExpManip_WrayLane-Final.pdf">Pedagogical Experience Manipulation for Cultural Learning.</a> In Proceedings of the
 2nd Workshop on Culturally-Aware Tutoring Systems (CATS) held in conjunction 
@@ -300,10 +303,10 @@ with AIED 2009, 35-44.  <a href="http://www.iro.umontreal.ca/~blanchae/CATS/inde
 
 <li>
 <p>
-H. Chad Lane, Mark Core, Dave Gomboc, Mike Birch, John Hart & Milton Rosenberg. (2009). 
+H. Chad Lane, Mark Core, Dave Gomboc, Mike Birch, John Hart &amp; Milton Rosenberg. (2009). 
 <a href="http://www.cs.usyd.edu.au/~llum/2009_UMAP09_llum/Chad_Lane_etal.pdf">
 Using Written and Behavioral Data to Detect Evidence of Continuous
-Learning</a> (click to download from workshop site).  In Proceedings
+Learning</a>.  In Proceedings
 of the UMAP 2009 Workshop on Lifelong User Modelling, 54-61. Associated project: <b>TACL</b>.
 </p>
 </li>
@@ -312,107 +315,116 @@ of the UMAP 2009 Workshop on Lifelong User Modelling, 54-61. Associated project:
 <p>
 <a name="AIED-2009">
 Matthew Hays, H. Chad Lane, Daniel Auerbach,
-Mark G. Core, Dave Gomboc & Milton Rosenberg. (2009).</a>
+Mark G. Core, Dave Gomboc &amp; Milton Rosenberg. (2009).</a>
 <a href="http://hayslab.com/publications/hays.lane.auerbach.core.gomboc.rosenberg.2009.pdf">Feedback Specificity and the Learning of Intercultural Communication 
-Skills</a> (click to download from Hays). In Proceedings of the 14th International Conference on Artificial Intelligence in Education (AIED). Associated project: <b>BiLAT</b>.
+Skills</a>. In Proceedings of the 14th International Conference on Artificial Intelligence in Education (AIED). 
+Keywords: <b>virtual role players, intelligent tutoring systems, negotiation, cultural awareness, BiLAT</b>.
 </p>
 </li>
 
 <li>
 <p>
 Julia M. Kim, Randall W. Hill, Jr., Paula J. Durlach, H. Chad Lane,
-Eric Forbell, Mark Core, Stacy Marsella, David V. Pynadath & John
+Eric Forbell, Mark Core, Stacy Marsella, David V. Pynadath &amp; John
 Hart. (2009).  <u>BiLAT: A Game-Based Environment for Practicing
 Negotiation in a Cultural Context.</u> In International Journal of
 Artificial Intelligence in Education, Special Issue on Ill-Defined
-Domains, 19(3), 289-308. Associated project: <b>BiLAT</b>.
+Domains, 19(3), 289-308. Keywords: <b>virtual role players, intelligent tutoring systems,
+	negotiation, cultural awareness, BiLAT</b>.
 </p>
 </li>
 
 <li>
 <p>
-Steven Solomon, Michael van Lent, Mark Core, Paul Carpenter &
+Steven Solomon, Michael van Lent, Mark Core, Paul Carpenter &amp;
 Milton Rosenberg. (2008). <a href="https://ict.usc.edu/pubs/A%20Language%20for%20Modeling%20Cultural%20Norms,%20Biases%20and%20Stereotypes%20for%20Human%20Behavior%20Models.pdf">A Language for Modeling Cultural Norms,
-Biases and Stereotypes for Human Behavior Models</a> (click to download from ICT). In Proceedings of
+Biases and Stereotypes for Human Behavior Models</a>. In Proceedings of
 the 17th Conference on Behavior Representation in Modeling and
-Simulation (BRIMS). Associated project: <b>CAB</b>.
+Simulation (BRIMS). Keywords: <b>computational models of culture, cultural awareness, virtual role players</b>.
 </p>
 </li>
 
 <li>
 <p>
-Dave Gomboc, H. Chad Lane, Mark Core, Ashish Karnavat, Daniel Auerbach &
-Milton Rosenberg. (2008).  <a href="https://ict.usc.edu/pubs/An%20Intelligent%20Tutoring%20Framework%20for%20Simulation-based%20Training.pdf">An Intelligent Tutoring Framework for Simulation-based Training</a>  (click to download from ICT). Short paper in Proceedings of the 16th International Conference on Computers in Education (ICCE).
+Dave Gomboc, H. Chad Lane, Mark Core, Ashish Karnavat, Daniel Auerbach &amp;
+Milton Rosenberg. (2008).  <a href="https://ict.usc.edu/pubs/An%20Intelligent%20Tutoring%20Framework%20for%20Simulation-based%20Training.pdf">An Intelligent Tutoring Framework for Simulation-based Training</a>. Short paper in Proceedings of the 16th International Conference on Computers in Education (ICCE). Keywords: <b>intelligent tutoring systems</b>.
 </p>
 </li>
 
 <li><p>
 <a name="ICCE-2008">
-H. Chad Lane, Matthew Hays, Mark Core, Dave Gomboc, Eric Forbell &
+H. Chad Lane, Matthew Hays, Mark Core, Dave Gomboc, Eric Forbell &amp;
 Milton Rosenberg. (2008).</a>  <a href="https://ict.usc.edu/pubs/Coaching%20Intercultural%20Communication%20in%20a%20Serious%20Game.pdf">Coaching Intercultural Communication in a 
-Serious Game</a> (click to download from ICT). In Proceedings of the 16th International Conference on Computers in Education
-(ICCE). WINNER BEST PAPER AWARD. Associated project: <b>BiLAT</b>.
+Serious Game</a>. In Proceedings of the 16th International Conference on Computers in Education
+(ICCE). WINNER BEST PAPER AWARD. Associated project: <b>intelligent tutoring systems, virtual role players,
+	cultural awareness, negotiation, BiLAT</b>.
 
 </p>
 </li>
 
 <li><p>
-Dave Gomboc, Mark Core, H. Chad Lane, Ashish Karnavat & Milton Rosenberg
+Dave Gomboc, Mark Core, H. Chad Lane, Ashish Karnavat &amp; Milton Rosenberg.
 (2008).  <u>An Intelligent Tutoring Architecture for Simulation-based
 Training.</u>  Poster in Proceedings of the 21st International Florida Artificial Intelligence
-Research Society Conference (FLAIRS).
+Research Society Conference (FLAIRS). Keywords: <b>intelligent tutoring systems</b>.
 </p>
 </li>
 
 <li>
 <p>
-Michael van Lent, Mark Core, Steve Solomon, Milton Rosenberg, Ryan McAlinden, Paul
-Carpenter. (2007). Modeling of Culturally Affected Human Behavior. <A href="http://www.nae.edu/Publications/Bridge/ExpandingFrontiersofEngineering.aspx">The Bridge, Winter, 37(4)</a>. Associated project: <b>CAB</b>.
+Michael van Lent, Mark Core, Steve Solomon, Milton Rosenberg, Ryan McAlinden &amp; Paul
+Carpenter. (2007). Modeling of Culturally Affected Human Behavior. <A href="http://www.nae.edu/Publications/Bridge/ExpandingFrontiersofEngineering.aspx">The Bridge, Winter, 37(4)</a>. Keywords: <b>computational models of culture, 
+ cultural awareness</b>.
 </p>
 </li>
 
 
 <li><p>
-H. Chad Lane,  Mark G. Core,  Dave Gomboc, Ashish Karnavat & Milton Rosenberg.
+H. Chad Lane,  Mark G. Core,  Dave Gomboc, Ashish Karnavat &amp; Milton Rosenberg.
 (2007). <a href="https://ict.usc.edu/pubs/Intelligent%20Tutoring%20for%20Interpersonal%20and%20Intercultural%20Skills.pdf">
 Intelligent Tutoring for Interpersonal and Intercultural
-Skills</a> (click to download from ICT). In Proceedings of the Interservice/Industry Training
-Simulation and Education Conference (I/ITSEC). Associated project: <b>BiLAT</b>.
+Skills</a>. In Proceedings of the Interservice/Industry Training
+Simulation and Education Conference (I/ITSEC). Keywords: <b>virtual role players, intelligent tutoring systems,
+	negotiation, cultural awareness, BiLAT</b>.
 </p></li>
 
 <li><p>
-Mark Core, David Traum, H. Chad Lane, William Swartout, Jonathan Gratch, Michael van Lent & Stacy Marsella. (2006). Teaching Negotiation Skills through 
+Mark Core, David Traum, H. Chad Lane, William Swartout, Jonathan Gratch, Michael van Lent &amp; Stacy Marsella. (2006). Teaching Negotiation Skills through 
 Practice and Reflection with Virtual Humans. 
 <a href="http://sim.sagepub.com/">
-SIMULATION</a>, November, 82(11), 685-701. Associated project: <b>RTXAI</b>.
+SIMULATION</a>, November, 82(11), 685-701. Keywords: <b>virtual role players, explainable artificial intelligence,
+  intelligent tutoring systems, negotiation</b>.
 </p>
 </li>
 
 <li>
 <p>
-Randall W. Hill, Jr., James Belanich, H. Chad Lane, Mark Core, Melissa Dixon, Eric Forbell, Julia Kim & John Hart. (2006).   
+Randall W. Hill, Jr., James Belanich, H. Chad Lane, Mark Core, Melissa Dixon, Eric Forbell, Julia Kim &amp; John Hart. (2006).   
 <A href="papers/2006-09-ASC06-ELECT-BiLAT-FINAL.pdf">
 Pedagogically Structured Game-Based Training: Development
 of the ELECT BiLAT Simulation.</a> In Proceedings of the 25th Army Science
-Conference. Associated project: <b>BiLAT</b>.
+Conference. Keywords: <b>intelligent tutoring systems, virtual role players,
+	negotiation, cultural awareness, BiLAT</b>.
 </p></li>
 
 <li><p>
-H. Chad Lane, Mark Core, Dave Gomboc, Steve Solomon, Michael van Lent &
+H. Chad Lane, Mark Core, Dave Gomboc, Steve Solomon, Michael van Lent &amp;
 Milton Rosenberg. (2006).
 <A href="papers/ITS06Lane.pdf">
 Reflective Tutoring for Immersive Simulation.</a> Poster in 
 Proceedings of the 8th International Conference on Intelligent
-Tutoring Systems (ITS), 732-734.</p>
+Tutoring Systems (ITS), 732-734. Keywords: <b>explainable artificial intelligence, 
+	intelligent tutoring systems, virtual role players, negotiation</b>.</p>
 </li>
 
 <li><p>
-Mark G. Core, H. Chad Lane, Michael van Lent, Dave Gomboc, Steve Solomon &
+Mark G. Core, H. Chad Lane, Michael van Lent, Dave Gomboc, Steve Solomon &amp;
 Milton Rosenberg. (2006).  
 <A href="papers/IAAI0602CoreM.pdf">
 Building Explainable Artificial Intelligence Systems.</a> In Proceedings
 of the 18th Innovative Applications of Artificial
-Intelligence Conference (IAAI), 41-44. Associated project: <b>RTXAI</b>.
+Intelligence Conference (IAAI), 41-44. Keywords: <b>explainable artificial intelligence,
+intelligent tutoring systems, virtual role players, negotiation</b>.
 </p>
 </li>
 
