--- a/research.html
+++ b/research.html
@@ -150,22 +150,21 @@ As a research fellow at the University of Edinburgh, I shifted my focus from dia
 </p>
 
 <p>
-As a research scientist at USC's Institute for Creative Technologies, my initial focus was <b>explainable artificial intelligence</b>, the capability for
-artificial agents to explain their decision making to human users. Currently, explainable AI most commonly refers to large language models being able to explain their reasoning, but it is also important for simulations in areas ranging from battle tactics to negotiations and cultural awareness.</p>
+As a research scientist at USC's Institute for Creative Technologies, one of my research areas is the use of dialogue systems as <b>virtual role players</b> allowing learners to practice interpersonal skills through <b>menu-based</b> or <b>open-response</b> interaction. The ability of such role players to explain their behavior (<b>explainable artificial intelligence</b>) is crucial to allowing the intelligent tutoring system to diagnose learner mistakes in scenarios that may include randomness and pre-scripted challenges. One challenge in developing explainable artificial intelligence is that background knowledge is often implicit in the utterances of the virtual role players. This is especially true for tutoring cultural awareness and we built a prototype <b>computational model of culture</b> to make the cultural motives of virtual role players explicit. <b>experience manipulation</b> is another area in which the tutor and virtual role player work together to promote learning. In this case, the tutor influences the responses of the virtual role player (e.g., making the scenario easier or harder; generating indirect feedback).</p>
+
+<p>
+Another focus area is immersive technologies ranging from mixed-reality experiences, VR headset-based interfaces and 3D simulations. 
+ 
+</p>
 
 <ul>
 <li><b>lifelong learning</b> refers to technology such as artificial learning companions that is designed to support long-term learning across a variety of domains.</li>
-<li><b>virtual role players</b> are animated characters playing a variety of roles to allow learners to practice interpersonal skills through <b>menu-based</b> or <b>open-response</b> interaction.</li> 
-<li><b>coaches</b> are intelligent tutoring systems that provide hints and feedback in real-time as a learner interacts with a virtual role player.</li>
+
 <li><b>reflective tutors</b> are intelligent tutoring systems that support after action reviews 
 	in which learners review their interaction with a virtual role player or other simulated experience.</li>
 <li><b>authoring tools</b> allow teachers and subject matter experts to create intelligent 
 	tutoring systems and virtual role players without requiring experience in AI or 
 	programming.</li>
-<li><b>experience manipulation</b> occurs when a coach influences the responses of a virtual role
-	player (e.g., making the scenario easier or harder; generating indirect feedback).</li>
-<li><b>computational models of culture</b> explicitly represent cultural concepts such as saving face that are implicit
-	in the language used by members of a culture. Incorporating such models into AI systems allows for adaptation to different cultures in applications such as <b>training cultural awareness.</b></li>
 <li><b>immersive technologies</b> include simulated 3D worlds and hardware such as VR headsets.</li>
 
 
